<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.microsoft.azure.kusto</groupId>
    <artifactId>kusto-client</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <url>https://github.com/Azure/azure-kusto-java</url>
    <scm>
        <url>scm:git:https://github.com/Azure/azure-kusto-java</url>
        <connection>scm:git:https://github.com/Azure/azure-kusto-java</connection>
    </scm>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>microsoft</id>
            <name>Microsoft</name>
        </developer>
    </developers>

    <properties>
        <revision>2.0.1</revision> <!-- CHANGE THIS to adjust project version-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>

        <!-- Versions below are  for several dependencies we're using in the data & ingest modules
         -->

        <!-- Compile dependencies -->
        <slf4j.version>1.8.0-beta4</slf4j.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <adal4j.version>1.6.4</adal4j.version>
        <httpclient.version>4.5.8</httpclient.version>
        <httpcore.version>4.4.11</httpcore.version>
        <json.version>20190722</json.version>
        <fasterxml.jackson.core.version>[2.9.6, 2.10.0)</fasterxml.jackson.core.version>
        <azure-storage.version>8.3.0</azure-storage.version>

        <!-- Test dependencies -->
        <bouncycastle.version>1.61</bouncycastle.version>
        <jsonassert.version>1.5.0</jsonassert.version>
        <sqlite-jdbc.version>3.27.2.1</sqlite-jdbc.version>
        <annotations.version>17.0.0</annotations.version>

        <!-- Other dependencies -->
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
        <junit.version>5.4.2</junit.version>
        <mockito.version>2.27.0</mockito.version>
    </properties>

    <modules>
        <module>ingest</module>
        <module>data</module>
        <module>samples</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
